Feat scss base 변수 추가

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1,2 +1,12 @@
+// variables & functions
+@import './absctracts/variables';
+
+// base & layout
+
+// colors
+
+// components
 @import 'pages/home';
 @import 'pages/login';
+
+// utilities
