Feat navbar 디자인 변경

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1,11 +1,15 @@
 // variables & functions
 @import './absctracts/variables';
+@import './absctracts/mixins';
 
 // base & layout
-
+@import 'layout/navbar.scss';
 // colors
 
 // components
+@import 'components/buttons';
+
+// pages
 @import 'pages/home';
 @import 'pages/login';
 
