--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
     /* font-family: 'Roboto', sans-serif; */
     font-family: 'Noto Sans KR', sans-serif;
     /* font-family: 'Roboto', sans-serif; */
