--- a/client/src/sass/absctracts/_variables.scss
+++ b/client/src/sass/absctracts/_variables.scss
@@ -1,7 +1,7 @@
 // theme colors
-$main-color: blue;
-$sub-color: green;
-$error-color: #d32752;
+$base-main-color: #9e9e9e;
+$base-sub-color: #212121;
+$base-error-color: #d32752;
 
 // font sizes
 $base-font-size: 1rem;
