--- a/client/src/sass/layout/navbar.scss
+++ b/client/src/sass/layout/navbar.scss
@@ -1,119 +1,95 @@
+%btn {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: $base-main-color;
+}
+
 .navbar {
-    width: 100vw;
-    height: 50px;
-    position: fixed;
     display: flex;
-    background-color: #fafafa;
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 10px 7%;
+    height: 50px;
+    border-bottom: 1px solid lightgray;
     z-index: 1000;
-    padding: 0 7%;
+    position: sticky;
+    top: 0;
+
+    @include mobile {
+        padding: 15px;
+    }
 
     #nav-menu {
         display: none;
     }
 
+    @include mobile {
+        #nav-menu:checked ~ .nav-right {
+            display: initial;
+        }
+    }
+
     label {
         cursor: pointer;
         display: none;
-    }
-
-    .nav-logo {
-        font-weight: bold;
-        font-size: $base-font-size * 1.1;
-        color: $base-main-color;
-        border: none;
-        background-color: transparent;
-        cursor: pointer;
-        &:hover {
-            color: $base-sub-color;
+        @include mobile {
+            display: initial;
         }
     }
 
     .nav-left {
         display: flex;
-        justify-content: left;
-        width: 70%;
+        align-items: center;
         gap: 10px;
 
-        .search-bar {
-            width: 220px;
-            height: 27px;
-            border-radius: $base-border-radius;
-            border: solid 1px rgba(0, 0, 0, 0.3);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 5;
-            opacity: 1;
-
-            .search-input {
-                width: 300px;
-                border: none;
-                // text-align: center;
-                margin-left: 5px;
-                outline: none;
-                overflow: auto;
-                z-index: 1;
-                font-size: $base-font-size;
-            }
-
-            .search-icon {
-                margin-left: 5px;
-                font-size: 16px;
+        .nav-logo {
+            @extend %btn;
+            font-weight: bold;
+            font-size: $base-font-size * 1.1;
+            &:hover {
+                color: $base-sub-color;
             }
         }
-    }
-    .search-input::-webkit-search-cancel-button {
-        -webkit-appearance: none;
-        // content: 'X';
-        width: 10px;
-        height: 10px;
-        margin-right: 5px;
-        background: url('../../assets/images/xmark.svg') center center no-repeat;
-        background-size: cover;
-        cursor: pointer;
+
+        .search-bar {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            border: 1px solid lightgray;
+            border-radius: 5px;
+            padding: $base-border-radius;
+
+            input {
+                width: 300px;
+                border: none;
+                outline: none;
+
+                @include mobile {
+                    width: 150px;
+                }
+            }
+
+            input::-webkit-search-cancel-button {
+                -webkit-appearance: none;
+                width: 10px;
+                height: 10px;
+                margin-right: 5px;
+                background: url('../../assets/images/xmark.svg') center center
+                    no-repeat;
+                background-size: cover;
+                cursor: pointer;
+            }
+        }
     }
 
     .nav-right {
-        width: 30%;
         display: flex;
-        justify-content: right;
+        align-items: center;
         position: relative;
         float: left;
-
-        button {
-            font-size: $base-font-size;
-            color: $base-main-color;
-            border: none;
-            background-color: transparent;
-            cursor: pointer;
-            gap: 10px;
-            border-radius: $base-border-radius;
-            padding: 4px;
-
-            &:hover {
-                background-color: #eeeeee;
-            }
-        }
-
-        .right-icon {
-            display: none;
-        }
-    }
-}
-// 768px 화면
-@include md {
-    .navbar {
-        justify-content: space-between;
-        padding: 15px;
-
-        label {
-            display: initial;
-        }
-
-        .nav-right {
+        // gap: 5px;
+        @include mobile {
             position: absolute;
             top: 100%;
             left: 0;
@@ -121,28 +97,187 @@
             background-color: #fafafa;
             border-top: 1px solid #000;
             display: none;
-            width: 100%;
-            height: 100vh;
+            // width: 100%;
+            // height: 100vh;
+        }
 
-            button {
+        button {
+            @extend %btn;
+            font-size: $base-font-size;
+            border-radius: $base-border-radius;
+            padding: 4px;
+            // font-weight: bold;
+            &:hover {
+                background-color: #eeeeee;
+            }
+
+            @include mobile {
                 width: 100%;
                 font-weight: bold;
-                font-size: $base-font-size * 1.2;
+                font-size: $base-font-size;
                 text-align: left;
                 padding: 20px;
-                color: #212121;
+                color: #616161;
+                &:hover {
+                    background-color: transparent;
+                }
             }
+        }
 
-            i {
-                margin-right: 5px;
-            }
-
-            .right-icon {
+        i {
+            display: none;
+            @include mobile {
                 display: initial;
+                margin-right: 10px;
             }
         }
     }
-    #nav-menu:checked ~ .nav-right {
-        display: initial;
-    }
 }
+
+// .navbar {
+//     width: 100vw;
+//     height: 50px;
+//     position: fixed;
+//     display: flex;
+//     background-color: #fafafa;
+//     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
+//     align-items: center;
+//     justify-content: center;
+//     z-index: 1000;
+//     padding: 0 7%;
+
+//     #nav-menu {
+//         display: none;
+//     }
+
+//     label {
+//         cursor: pointer;
+//         display: none;
+//     }
+
+//     .nav-logo {
+//         font-weight: bold;
+//         font-size: $base-font-size * 1.1;
+//         color: $base-main-color;
+//         border: none;
+//         background-color: transparent;
+//         cursor: pointer;
+//         &:hover {
+//             color: $base-sub-color;
+//         }
+//     }
+
+//     .nav-left {
+//         display: flex;
+//         justify-content: left;
+//         width: 70%;
+//         gap: 10px;
+
+//         .search-bar {
+//             width: 220px;
+//             height: 27px;
+//             border-radius: $base-border-radius;
+//             border: solid 1px rgba(0, 0, 0, 0.3);
+//             display: flex;
+//             justify-content: center;
+//             align-items: center;
+//             z-index: 5;
+//             opacity: 1;
+
+//             .search-input {
+//                 width: 300px;
+//                 border: none;
+//                 // text-align: center;
+//                 margin-left: 5px;
+//                 outline: none;
+//                 overflow: auto;
+//                 z-index: 1;
+//                 font-size: $base-font-size;
+//             }
+
+//             .search-icon {
+//                 margin-left: 5px;
+//                 font-size: 16px;
+//             }
+//         }
+//     }
+//     .search-input::-webkit-search-cancel-button {
+//         -webkit-appearance: none;
+//         // content: 'X';
+//         width: 10px;
+//         height: 10px;
+//         margin-right: 5px;
+//         background: url('../../assets/images/xmark.svg') center center no-repeat;
+//         background-size: cover;
+//         cursor: pointer;
+//     }
+
+//     .nav-right {
+//         width: 30%;
+//         display: flex;
+//         justify-content: right;
+//         position: relative;
+//         float: left;
+
+//         button {
+//             font-size: $base-font-size;
+//             color: $base-main-color;
+//             border: none;
+//             background-color: transparent;
+//             cursor: pointer;
+//             gap: 10px;
+//             border-radius: $base-border-radius;
+//             padding: 4px;
+
+//             &:hover {
+//                 background-color: #eeeeee;
+//             }
+//         }
+
+//         .right-icon {
+//             display: none;
+//         }
+//     }
+// }
+// // 768px 화면
+// @include mobile {
+//     .navbar {
+//         padding: 15px;
+
+//         label {
+//             display: initial;
+//         }
+
+//         .nav-right {
+//             position: absolute;
+//             top: 100%;
+//             left: 0;
+//             right: 0;
+//             background-color: #fafafa;
+//             border-top: 1px solid #000;
+//             display: none;
+//             width: 100%;
+//             height: 100vh;
+
+//             button {
+//                 width: 100%;
+//                 font-weight: bold;
+//                 font-size: $base-font-size * 1.2;
+//                 text-align: left;
+//                 padding: 20px;
+//                 color: #212121;
+//             }
+
+//             i {
+//                 margin-right: 5px;
+//             }
+
+//             .right-icon {
+//                 display: initial;
+//             }
+//         }
+//     }
+//     #nav-menu:checked ~ .nav-right {
+//         display: initial;
+//     }
+// }
