--- a/client/src/sass/pages/_login.scss
+++ b/client/src/sass/pages/_login.scss
@@ -1,5 +1,9 @@
+.errorsMessage {
+    color: red;
+}
+
 .login-container {
-    height: 100vh;
+    // height: 100vh;
     background-color: #eee;
     display: flex;
     align-items: center;
@@ -11,9 +15,14 @@
         padding: 10px;
         display: flex;
         align-items: center;
-        font-weight: bold;
         gap: 10px;
+        background-color: transparent;
         cursor: pointer;
+
+        span {
+            font-weight: bold;
+            font-size: $base-font-size;
+        }
     }
 
     .login-form {
@@ -24,6 +33,20 @@
         flex-direction: column;
         gap: 10px;
 
+        .link {
+            text-align: right;
+            font-size: $base-font-size;
+            font-weight: bold;
+
+            a {
+                color: black;
+                text-decoration-line: none;
+                &:visited {
+                    text-decoration: none;
+                }
+            }
+        }
+
         .login-title {
             color: black;
             font-weight: bold;
@@ -32,17 +55,6 @@
 
         .login-input p {
             margin-bottom: 3px;
-        }
-
-        .login-link {
-            text-align: right;
-            text-decoration: none;
-            &:link {
-                color: blue;
-            }
-            &:visited {
-                color: blue;
-            }
         }
 
         form {
@@ -70,23 +82,15 @@
                 border-radius: 4px;
                 cursor: pointer;
                 &:hover {
-                    background-color: #1a237e;
+                    background-color: #303f9f;
                 }
             }
         }
     }
 }
 
-// .split-screen {
-//     display: flex;
-//     width: 80%;
-//     height: 500px;
-// }
-
-// .split-screen__half {
-//     display: flex;
-//     flex: 1;
-//     background-color: aquamarine;
-//     align-items: center;
-//     justify-content: center;
-// }
+@include md {
+    // .login-container {
+    //     margin-top: 100px;
+    // }
+}
