--- a/client/src/sass/absctracts/_mixins.scss
+++ b/client/src/sass/absctracts/_mixins.scss
@@ -4,19 +4,19 @@ $breakpoints: (
     'lg': 1200px,
 );
 
-// @mixin sm {
-//     @media (max-width: map-get($breakpoints, 'sm')) {
-//         @content;
-//     }
-// }
+@mixin sm {
+    @media (max-width: map-get($breakpoints, 'sm')) {
+        @content;
+    }
+}
 
-@mixin mobile {
+@mixin md {
     @media (max-width: map-get($breakpoints, 'md')) {
         @content;
     }
 }
 
-@mixin tablet {
+@mixin lg {
     @media (max-width: map-get($breakpoints, 'lg')) {
         @content;
     }
