--- a/client/src/sass/pages/_login.scss
+++ b/client/src/sass/pages/_login.scss
@@ -3,77 +3,97 @@
 }
 
 .login-container {
-    // height: 100vh;
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
     background-color: #eee;
     display: flex;
     align-items: center;
     justify-content: center;
 
-    .socialLogin-kakao {
-        border: 1px solid black;
-        border-radius: 4px;
-        padding: 10px;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        background-color: transparent;
-        cursor: pointer;
-
-        span {
-            font-weight: bold;
-            font-size: $base-font-size;
-        }
-    }
-
-    .login-form {
-        background-color: white;
-        padding: 40px 50px;
+    .login-wrapper {
+        width: 500px;
+        background: #ffffff;
         border-radius: 10px;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-
-        .link {
-            text-align: right;
-            font-size: $base-font-size;
-            font-weight: bold;
-
-            a {
-                color: black;
-                text-decoration-line: none;
-                &:visited {
-                    text-decoration: none;
-                }
-            }
+        background-color: white;
+        padding: 50px 40px;
+        @include sm {
+            width: 100%;
+            min-height: 100vh;
+            padding: 15px 10px;
         }
+
+        // padding: 40px 50px;
+        // border-radius: 10px;
+        // display: flex;
+        // justify-content: center;
+        // flex-direction: column;
+        // @include md {
+        //     padding: 10px;
+        // }
 
         .login-title {
             color: black;
             font-weight: bold;
             font-size: 24px;
+            margin-bottom: 10px;
         }
 
-        .login-input p {
-            margin-bottom: 3px;
+        hr {
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+
+        .socialLogin-kakao {
+            border: 1px solid black;
+            border-radius: 4px;
+            width: 100%;
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            background-color: transparent;
+            cursor: pointer;
+
+            span {
+                font-weight: bold;
+                font-size: $base-font-size;
+            }
         }
 
         form {
             display: flex;
             flex-direction: column;
             gap: 10px;
-            width: 400px;
+            // padding: 40px 50px;
+            width: 100%;
 
-            input {
-                width: 400px;
-                padding: 10px;
-                border: 1px solid black;
-                border-radius: 4px;
-                &:active {
-                    border: 1px solid #1a237e;
+            .login-input {
+                position: relative;
+                width: 100%;
+
+                input {
+                    display: block;
+                    width: 100%;
+                    padding: 10px;
+                    height: 40px;
+                    border: 1px solid black;
+                    border-radius: $base-border-radius;
+                    &:active {
+                        border: 1px solid #1a237e;
+                    }
+                    // @include mobile {
+                    //     width: 400px;
+                    // }
+                }
+
+                p {
+                    margin-bottom: 3px;
                 }
             }
 
             button {
+                display: inline-block;
                 background-color: #3d5afe;
                 color: white;
                 padding: 10px;
@@ -86,11 +106,132 @@
                 }
             }
         }
+
+        .link {
+            margin-top: 5px;
+            text-align: right;
+            font-size: $base-font-size;
+            font-weight: bold;
+
+            a {
+                color: black;
+                text-decoration-line: none;
+                &:visited {
+                    text-decoration: none;
+                }
+            }
+        }
     }
 }
 
-@include md {
-    // .login-container {
-    //     margin-top: 100px;
-    // }
-}
+// .errorsMessage {
+//     color: red;
+// }
+
+// .login-container {
+//     position: relative;
+//     width: 100%;
+//     min-height: 100vh;
+//     background-color: #eee;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     // @include md {
+//     // align-items: baseline;
+//     // }
+
+//     .socialLogin-kakao {
+//         border: 1px solid black;
+//         border-radius: 4px;
+//         padding: 10px;
+//         display: flex;
+//         align-items: center;
+//         gap: 10px;
+//         background-color: transparent;
+//         cursor: pointer;
+
+//         span {
+//             font-weight: bold;
+//             font-size: $base-font-size;
+//         }
+//     }
+
+//     .login-form {
+//         background-color: white;
+//         padding: 40px 50px;
+//         border-radius: 10px;
+//         display: flex;
+//         justify-content: center;
+//         flex-direction: column;
+//         gap: 10px;
+//         // @include md {
+//         //     padding: 10px;
+//         // }
+
+//         .link {
+//             text-align: right;
+//             font-size: $base-font-size;
+//             font-weight: bold;
+
+//             a {
+//                 color: black;
+//                 text-decoration-line: none;
+//                 &:visited {
+//                     text-decoration: none;
+//                 }
+//             }
+//         }
+
+//         .login-title {
+//             color: black;
+//             font-weight: bold;
+//             font-size: 24px;
+//         }
+
+//         form {
+//             display: flex;
+//             flex-direction: column;
+//             gap: 10px;
+//             // width: 400px;
+//             width: 100%;
+//             // width: 100vw;
+
+//             .login-input {
+//                 position: relative;
+//                 width: 100%;
+
+//                 input {
+//                     // max-width: 400px;
+//                     // height: 35px;
+//                     width: 100%;
+//                     padding: 10px;
+//                     border: 1px solid black;
+//                     border-radius: 4px;
+//                     &:active {
+//                         border: 1px solid #1a237e;
+//                     }
+//                     // @include mobile {
+//                     //     width: 400px;
+//                     // }
+//                 }
+
+//                 p {
+//                     margin-bottom: 3px;
+//                 }
+//             }
+
+//             button {
+//                 background-color: #3d5afe;
+//                 color: white;
+//                 padding: 10px;
+//                 font-weight: bold;
+//                 border: none;
+//                 border-radius: 4px;
+//                 cursor: pointer;
+//                 &:hover {
+//                     background-color: #303f9f;
+//                 }
+//             }
+//         }
+//     }
+// }
