--- a/client/src/sass/layout/navbar.scss
+++ b/client/src/sass/layout/navbar.scss
@@ -11,12 +11,13 @@
     justify-content: space-between;
     padding: 10px 7%;
     height: 50px;
+    background-color: #fafafa;
     border-bottom: 1px solid lightgray;
     z-index: 1000;
     position: sticky;
     top: 0;
 
-    @include md {
+    @include sm {
         padding: 15px;
     }
 
@@ -24,7 +25,7 @@
         display: none;
     }
 
-    @include md {
+    @include sm {
         #nav-menu:checked ~ .nav-right {
             display: initial;
         }
@@ -33,7 +34,7 @@
     label {
         cursor: pointer;
         display: none;
-        @include md {
+        @include sm {
             display: initial;
         }
     }
@@ -65,7 +66,7 @@
                 border: none;
                 outline: none;
 
-                @include md {
+                @include sm {
                     width: 150px;
                 }
             }
@@ -89,7 +90,7 @@
         position: relative;
         float: left;
         // gap: 5px;
-        @include md {
+        @include sm {
             position: absolute;
             top: 100%;
             left: 0;
@@ -97,8 +98,8 @@
             background-color: #fafafa;
             border-top: 1px solid #000;
             display: none;
+            height: 100vh;
             // width: 100%;
-            // height: 100vh;
         }
 
         button {
@@ -111,7 +112,7 @@
                 background-color: #eeeeee;
             }
 
-            @include md {
+            @include sm {
                 width: 100%;
                 font-weight: bold;
                 font-size: $base-font-size;
@@ -126,7 +127,7 @@
 
         i {
             display: none;
-            @include md {
+            @include sm {
                 display: initial;
                 margin-right: 10px;
             }
