Style Home UI 수정

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -7,7 +7,9 @@
 // colors
 
 // components
+@import 'components/post';
 @import 'components/buttons';
+@import 'components/dropdown';
 
 // pages
 @import 'pages/home';
