--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,7 @@
     padding: 0;
     /* font-family: 'Roboto', sans-serif; */
     font-family: 'Noto Sans KR', sans-serif;
+    text-decoration: none;
     /* font-family: 'Roboto', sans-serif; */
     /* background-color: #f5f5f5; */
 }
