--- a/client/src/sass/absctracts/_variables.scss
+++ b/client/src/sass/absctracts/_variables.scss
@@ -1,5 +1,6 @@
 // theme colors
-$base-main-color: #9e9e9e;
+$base-bg-color: #f5f5f5;
+$base-main-color: #eeeeee;
 $base-sub-color: #212121;
 $base-error-color: #d32752;
 
