Style addpost UI 수정

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import 'components/comment';
 @import 'components/commentForm';
 @import 'components/nestedComments';
+@import 'components/textEditor';
 
 // pages
 @import 'pages/home';
