Feat 검색기능 추가

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -24,4 +24,5 @@
 @import 'pages/register';
 @import 'pages/post';
 @import 'pages/addpost';
+@import 'pages/search';
 // utilities (maring, padding)
