Feat Intersection Observer 추가

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import 'components/commentForm';
 @import 'components/nestedComments';
 @import 'components/textEditor';
+@import 'components/loading';
 
 // pages
 @import 'pages/home';
