Style Home 스타일 변경

--- a/client/src/sass/absctracts/_mixins.scss
+++ b/client/src/sass/absctracts/_mixins.scss
@@ -27,3 +27,10 @@ $breakpoints: (
         @content;
     }
 }
+
+// 버튼.
+@mixin btn() {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
