--- a/client/src/sass/components/_postCard.scss
+++ b/client/src/sass/components/_postCard.scss
@@ -1,6 +1,7 @@
 .postcard-header {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
     .postcard-info {
         display: flex;
