--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -4,3 +4,15 @@
     padding: 0;
     font-family: 'Noto Sans KR', sans-serif;
 }
+
+body {
+    background-color: #f5f5f5;
+}
+
+a {
+    color: black;
+    text-decoration-line: none;
+    &:visited {
+        text-decoration: none;
+    }
+}
