--- a/client/src/sass/components/_dropdown.scss
+++ b/client/src/sass/components/_dropdown.scss
@@ -2,24 +2,28 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
-    color: $base-main-color;
+    color: white;
 }
 
 .dropdown {
-    width: 200px;
+    width: 100px;
     // margin: 0 auto;
     position: relative;
+    display: flex;
+    justify-content: right;
+    bottom: 10px;
 
     .dropdown-btn {
         padding: 10px;
-        background-color: #fff;
+        background-color: transparent;
+
+        // background-color: white;
         border: none;
-        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
         font-weight: bold;
         display: flex;
         align-items: center;
         justify-content: center;
-        justify-content: space-between;
+
         cursor: pointer;
     }
 
@@ -45,67 +49,3 @@
         }
     }
 }
-
-// .dropdown::before {
-//     content: '';
-//     position: absolute;
-//     width: 8px;
-//     height: 8px;
-//     border: 2px solid #333;
-//     right: 20px;
-//     top: 15px;
-//     z-index: 1000;
-//     border-top: 2px solid #fff;
-//     border-right: 2px solid #fff;
-//     transform: rotate(-45deg);
-// }
-
-// .dropdown.active::before {
-//     top: 25px;
-//     transform: rotate(-255deg);
-// }
-
-// .dropdown {
-//     width: 300px;
-//     margin: 100px auto;
-
-//     .dropdown-btn {
-//         padding: 10px;
-//         background-color: #fff;
-//         box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
-//         position: absolute;
-//         font-weight: bold;
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-// top: 0;
-// left: 0;
-// width: 100%;
-// height: 100%;
-// cursor: pointer;
-// background-color: #fff;
-// border: none;
-// outline: none;
-// border-radius: 10px;
-// }
-
-// .dropdown-options {
-//     position: absolute;
-//     top: 70px;
-//     width: 100%;
-//     background-color: #fff;
-//     box-shadow: 0 30px 30px rgba(0, 0, 0, 0.05);
-//     border-radius: 10px;
-//     overflow: hidden;
-//     // display: none;
-
-//     div {
-//         padding: 12px 20px;
-//         cursor: pointer;
-//         &:hover {
-//             background-color: #62baea;
-//             counter-reset: #fff;
-//         }
-//     }
-// }
-// }
