Style auth 모바일 UI 변경

--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,9 +1,13 @@
-.container {
-    text-align: center;
-    padding: 35px 0 30px;
-    margin-top: auto;
+@import '../../sass/main.scss';
 
-    .copyright {
-        padding-top: 20px;
+.footer {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    padding: 35px 0 30px;
+    width: 100%;
+
+    .footer-copyright {
+        color: black;
     }
 }
