--- a/client/src/sass/absctracts/_variables.scss
+++ b/client/src/sass/absctracts/_variables.scss
@@ -9,6 +9,11 @@ $base-font-size: 1rem;
 $base-font-sm: $base-font-size * 0.75;
 $base-font-lg: $base-font-size * 1.5;
 
+// font sizes
+$f-mid: 1rem;
+$f-small: $base-font-size * 0.75;
+$f-lg: $base-font-size * 1.25;
+
 // spacing
 $base-padding: 0.75rem;
 $base-maring: 0.75rem;
