--- a/client/src/components/PostCard/PostCard/PostCard.scss
+++ b/client/src/components/PostCard/PostCard/PostCard.scss
@@ -27,7 +27,7 @@
 
             .postcard-date {
                 font-size: $base-font-sm;
-                color: #9e9e9e;
+                color: $base-main-color;
             }
         }
     }
