--- a/client/src/components/PostContent/PostContent.scss
+++ b/client/src/components/PostContent/PostContent.scss
@@ -1,11 +1,40 @@
-.postcontent {
-    // border-radius: 4px;
-    // border: 1px solid black;
-    // background-color: white;
-    // padding: 20px;
+@import '../../sass/main.scss';
 
-    .postcontent-card {
+.postcontent {
+    .postcontent-header {
         display: flex;
         align-items: center;
+        justify-content: space-between;
+
+        .postcontent-info {
+            display: flex;
+            gap: 7px;
+            justify-items: center;
+            align-items: center;
+
+            .postcontent-info-img {
+                border-radius: 50%;
+                object-fit: cover;
+            }
+
+            .postcontent-info-details {
+                display: flex;
+                flex-direction: column;
+
+                .postcontent-name {
+                    font-weight: bold;
+                    font-size: $f-small;
+                }
+
+                .postcontent-date {
+                    font-size: $f-small;
+                    color: #9e9e9e;
+                }
+            }
+        }
+    }
+    .postcontent-title {
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
