--- a/client/src/pages/Post/Post.scss
+++ b/client/src/pages/Post/Post.scss
@@ -2,26 +2,35 @@
 
 .post {
     width: 100%;
-    height: calc(100vh - 50px);
+
     background: $base-bg-color;
     padding: 0 13%;
-
-    .post-container {
-        border-radius: 4px;
-        border: 1px solid black;
-        background-color: white;
-        padding: 20px;
+    margin-top: 20px;
+    @include sm {
+        padding: 0 3%;
     }
 
-    // .post-comment {
-    // display: flex;
-    // align-items: center;
-    // justify-content: space-between;
-    // gap: 20px;
-    // margin: 20px 0px;
-    // }
+    .post-line {
+        margin-top: 10px;
+    }
 
-    // .post-container {
-    //     padding: 0 20%;
-    // }
+    .container {
+        border-radius: $base-border-radius;
+        border: 1px solid $base-black-color;
+        background-color: white;
+        padding: 20px;
+
+        .post-auth {
+            margin-top: 10px;
+            font-size: $f-mid;
+
+            a {
+                color: $base-blue-color;
+            }
+        }
+
+        .post-commentForm {
+            margin-top: 10px;
+        }
+    }
 }
