--- a/client/src/sass/absctracts/_variables.scss
+++ b/client/src/sass/absctracts/_variables.scss
@@ -1,7 +1,9 @@
 // theme colors
 $base-bg-color: #f5f5f5;
-$base-main-color: #eeeeee;
+$base-main-color: #9e9e9e;
 $base-sub-color: #212121;
+$base-black-color: #212121;
+$base-blue-color: #3d5afe;
 $base-error-color: #d32752;
 
 // font sizes
