--- a/client/src/sass/absctracts/_variables.scss
+++ b/client/src/sass/absctracts/_variables.scss
@@ -2,6 +2,7 @@
 $base-bg-color: #f5f5f5;
 $base-main-color: #9e9e9e;
 $base-sub-color: #212121;
+$base-white-color: #ffffff;
 $base-black-color: #212121;
 $base-blue-color: #3d5afe;
 $base-error-color: #d32752;
