Style 게시물 스타일 변경

--- a/client/src/components/Comments/CommentDropdown/CommentDropdown.scss
+++ b/client/src/components/Comments/CommentDropdown/CommentDropdown.scss
@@ -1,3 +1,5 @@
+@import '../../../sass/main.scss';
+
 %dropdown-btn {
     background-color: transparent;
     border: none;
@@ -5,34 +7,30 @@
     color: white;
 }
 
-.dropdown {
+.comment-dropdown {
     width: 100px;
-    // margin: 0 auto;
+
     position: relative;
     display: flex;
     justify-content: right;
     bottom: 10px;
 
     .dropdown-btn {
-        padding: 10px;
         background-color: transparent;
-
-        // background-color: white;
         border: none;
         font-weight: bold;
         display: flex;
         align-items: center;
         justify-content: center;
-
         cursor: pointer;
     }
 
     .dropdown-options {
         position: absolute;
-        top: 110%;
+        top: 130%;
         left: 0;
-        // right: 0;
-        padding: 10px;
+        border: 1px solid #bdbdbd;
+        border-radius: $base-border-radius;
         background-color: #fff;
         box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
         font-weight: 500;
