--- a/client/src/components/Comments/NestedComment/NestedComment.scss
+++ b/client/src/components/Comments/NestedComment/NestedComment.scss
@@ -4,10 +4,12 @@
     margin: 10px 0 10px;
     width: 98%;
     float: right;
+    background-color: #f5f5f5;
+    border-radius: $base-border-radius;
 
     .nestedcomment-info {
         display: flex;
-        margin-top: 10px;
+        margin: 5px 0 0 5px;
         gap: 7px;
         align-items: center;
 
@@ -34,15 +36,16 @@
     }
 
     .nestedcomment-description {
-        margin: 5px 0 5px;
+        margin: 5px 0 5px 5px;
     }
 
     .nestedcomments-like {
         display: flex;
         justify-items: center;
+        // justify-content: center;
         gap: 2px;
         font-size: $f-small;
-        margin-top: 10px;
+        margin: 10px 0 0 5px;
 
         span {
             font-size: $f-small;
