--- a/client/src/components/PostCard/Dropdown/Dropdown.scss
+++ b/client/src/components/PostCard/Dropdown/Dropdown.scss
@@ -1,3 +1,5 @@
+@import '../../../sass/main.scss';
+
 %dropdown-btn {
     background-color: transparent;
     border: none;
@@ -16,14 +18,12 @@
     .dropdown-btn {
         padding: 10px;
         background-color: transparent;
-
         // background-color: white;
         border: none;
         font-weight: bold;
         display: flex;
         align-items: center;
         justify-content: center;
-
         cursor: pointer;
     }
 
@@ -34,6 +34,8 @@
         // right: 0;
         padding: 10px;
         background-color: #fff;
+        border: 1px solid #bdbdbd;
+        border-radius: $base-border-radius;
         box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
         font-weight: 500;
         width: 100%;
