--- a/client/src/pages/Post/Post.scss
+++ b/client/src/pages/Post/Post.scss
@@ -2,12 +2,12 @@
 
 .post {
     width: 100%;
-
     background: $base-bg-color;
     padding: 0 13%;
     margin-top: 20px;
     @include sm {
-        padding: 0 3%;
+        padding: 0 0%;
+        margin-top: 0px;
     }
 
     .post-line {
@@ -19,6 +19,10 @@
         border: 1px solid $base-black-color;
         background-color: white;
         padding: 20px;
+        @include sm {
+            border: none;
+            height: 100%;
+        }
 
         .post-auth {
             margin-top: 10px;
