Style 반응형 디자인 수정

--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -81,6 +81,9 @@
                     no-repeat;
                 background-size: cover;
                 cursor: pointer;
+                @include sm {
+                    -webkit-appearance: none;
+                }
             }
         }
     }
