Style loading 화면 추가

--- a/client/src/pages/Post/Post.scss
+++ b/client/src/pages/Post/Post.scss
@@ -10,6 +10,11 @@
         margin-top: 0px;
     }
 
+    .post-loading {
+        display: flex;
+        justify-content: center;
+    }
+
     .post-line {
         margin-top: 10px;
     }
