Fix 반응형 웹 페이지 정렬 버튼 오류 현상 수정

--- a/client/src/sass/absctracts/_mixins.scss
+++ b/client/src/sass/absctracts/_mixins.scss
@@ -30,6 +30,7 @@ $breakpoints: (
 
 // 버튼.
 @mixin btn() {
+    color: #000000;
     background-color: transparent;
     border: none;
     cursor: pointer;
