--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -47,6 +47,7 @@
 
         .nav-logo {
             @extend %btn;
+            color: #000000;
             font-weight: bold;
             font-size: $base-font-size * 1.1;
             &:hover {
@@ -66,7 +67,6 @@
                 width: 300px;
                 border: none;
                 outline: none;
-
                 @include sm {
                     width: 150px;
                 }
@@ -81,9 +81,10 @@
                     no-repeat;
                 background-size: cover;
                 cursor: pointer;
-                @include sm {
-                    -webkit-appearance: none;
-                }
+            }
+
+            input[type='search']::-webkit-search-decoration {
+                -webkit-appearance: none;
             }
         }
     }
