--- a/client/src/components/PostCard/Dropdown/Dropdown.scss
+++ b/client/src/components/PostCard/Dropdown/Dropdown.scss
@@ -42,8 +42,12 @@
 
         .dropdown-item {
             padding: 10px;
+            width: 100%;
+            display: flex;
             cursor: pointer;
             transition: all 0.2s;
+            background-color: transparent;
+            border: none;
 
             &:hover {
                 background-color: #f4f4f4;
