Fix 사파리 버튼 클릭 시 오류 수정

--- a/client/src/components/Comments/NestedComments/NestedComments.scss
+++ b/client/src/components/Comments/NestedComments/NestedComments.scss
@@ -29,6 +29,10 @@
                 color: $base-main-color;
             }
         }
+
+        .nestedcomment-dropdown {
+            margin-right: 10px;
+        }
     }
 
     .nestedcomments-description {
