--- a/client/src/components/Comments/CommentDropdown/CommentDropdown.scss
+++ b/client/src/components/Comments/CommentDropdown/CommentDropdown.scss
@@ -9,7 +9,6 @@
 
 .comment-dropdown {
     width: 100px;
-
     position: relative;
     display: flex;
     justify-content: right;
@@ -37,13 +36,12 @@
         width: 100%;
 
         .dropdown-item {
+            @include btn;
             padding: 10px;
             width: 100%;
             display: flex;
-            cursor: pointer;
+
             transition: all 0.2s;
-            background-color: transparent;
-            border: none;
 
             &:hover {
                 background-color: #f4f4f4;
