Fix 사파리 버튼 클릭 시 오류 수정

--- a/client/src/components/Comments/CommentDropdown/CommentDropdown.scss
+++ b/client/src/components/Comments/CommentDropdown/CommentDropdown.scss
@@ -15,13 +15,11 @@
     bottom: 10px;
 
     .dropdown-btn {
-        background-color: transparent;
-        border: none;
+        @include btn;
         font-weight: bold;
         display: flex;
         align-items: center;
         justify-content: center;
-        cursor: pointer;
     }
 
     .dropdown-options {
