--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -22,6 +22,11 @@
             &:hover {
                 color: black;
             }
+            @include sm {
+                &:hover {
+                    color: #9e9e9e;
+                }
+            }
         }
     }
 
