--- a/client/src/components/PostCard/PostCard/PostCard.scss
+++ b/client/src/components/PostCard/PostCard/PostCard.scss
@@ -1,34 +1,59 @@
 @import '../../../sass//main.scss';
 
-.postcard-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.postcard {
+    margin-top: 10px;
+    background-color: white;
+    padding: $base-padding;
+    border-radius: $base-border-radius;
+    border: 1px solid black;
 
-    .postcard-info {
-        display: flex;
-        gap: 7px;
-        justify-items: center;
-        align-items: center;
+    .postcard-container {
+        padding: 10px;
 
-        .postcard-info-img {
-            border-radius: 50%;
-            object-fit: cover;
+        .postcard-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            .postcard-info {
+                display: flex;
+                gap: 7px;
+                justify-items: center;
+                align-items: center;
+
+                .postcard-info-img {
+                    border-radius: 50%;
+                    object-fit: cover;
+                }
+
+                .postcard-info-details {
+                    display: flex;
+                    flex-direction: column;
+
+                    .postcard-name {
+                        font-weight: bold;
+                        font-size: $base-font-sm;
+                    }
+
+                    .postcard-date {
+                        font-size: $base-font-sm;
+                        color: $base-main-color;
+                    }
+                }
+            }
         }
 
-        .postcard-info-details {
+        .postcard-body {
+            margin-top: 5px;
+        }
+
+        .postcard-footer {
             display: flex;
-            flex-direction: column;
-
-            .postcard-name {
-                font-weight: bold;
-                font-size: $base-font-sm;
-            }
-
-            .postcard-date {
-                font-size: $base-font-sm;
-                color: $base-main-color;
-            }
+            align-items: center;
+            margin-top: 10px;
+            gap: 5px;
+            font-weight: bold;
+            font-size: $base-font-sm;
         }
     }
 }
