Style 코드 스타일 변경

--- a/client/src/components/Comments/CommentForm/CommentForm.scss
+++ b/client/src/components/Comments/CommentForm/CommentForm.scss
@@ -17,13 +17,12 @@
         margin-top: 5px;
 
         button {
+            @include btn;
             padding: 10px;
-            border: none;
             border-radius: $base-border-radius;
             background: $base-blue-color;
             color: white;
             margin-right: 5px;
-            cursor: pointer;
         }
     }
 }
