--- a/client/src/pages/EditPost/EditPost.scss
+++ b/client/src/pages/EditPost/EditPost.scss
@@ -38,6 +38,11 @@
             width: 100%;
             height: 400px;
         }
+
+        .ql-container.ql-snow {
+            border: none !important;
+            font-size: 16px;
+        }
     }
 
     .editpost-submit {
