Style css 스타일 변경

--- a/client/src/pages/Auth/auth.scss
+++ b/client/src/pages/Auth/auth.scss
@@ -96,6 +96,7 @@
         }
 
         .link {
+            @include aLink;
             margin-top: 5px;
             text-align: right;
             font-size: $f-mid;
