--- a/client/src/components/Modal/Comfirm/ComfirmModal.scss
+++ b/client/src/components/Modal/Comfirm/ComfirmModal.scss
@@ -46,7 +46,8 @@
             }
 
             .body {
-                color: #7b677b;
+                color: #000000;
+                font-weight: bold;
                 // padding: 15px 0;
             }
 
