--- a/client/src/components/PostCard/PostCard/PostCard.scss
+++ b/client/src/components/PostCard/PostCard/PostCard.scss
@@ -45,15 +45,23 @@
 
         .postcard-body {
             margin-top: 5px;
+
+            .postcard-body-title {
+                @include aLink;
+            }
         }
 
         .postcard-footer {
             display: flex;
             align-items: center;
             margin-top: 10px;
-            gap: 5px;
+            gap: 2px;
             font-weight: bold;
             font-size: $base-font-sm;
+
+            .footer-icon {
+                margin-left: 5px;
+            }
         }
     }
 }
