Feat 댓글 삭제 시 대댓글 존재하면 삭제 메시지 출력 추가

--- a/client/src/components/Comments/NestedComments/NestedComments.scss
+++ b/client/src/components/Comments/NestedComments/NestedComments.scss
@@ -38,8 +38,15 @@
         }
     }
 
+    .nestedcomments-description__deleted {
+        margin: 5px 0 5px 5px;
+        font-size: 13px;
+        color: #757575;
+    }
+
     .nestedcomments-description {
         margin: 5px 0 5px;
+        font-size: 14px;
     }
 
     .nestedcomments-button {
