Feat 이미지 업로드 사진 압축 및 로딩화면 추가

--- a/client/src/components/PostContent/PostContent.scss
+++ b/client/src/components/PostContent/PostContent.scss
@@ -37,4 +37,12 @@
         margin-top: 10px;
         margin-bottom: 10px;
     }
+
+    .postcontent-description {
+        img {
+            width: auto;
+            max-width: 100%;
+            height: auto;
+        }
+    }
 }
