Fix 콘텐츠 컨테이너 경계 초과 현상 수정

--- a/client/src/components/Comments/NestedComment/NestedComment.scss
+++ b/client/src/components/Comments/NestedComment/NestedComment.scss
@@ -45,6 +45,7 @@
     }
 
     .nestedcomment-description {
+        word-break: break-all;
         margin: 5px 0 5px 5px;
         font-size: 14px;
     }
