--- a/client/src/components/Comments/NestedComments/NestedComments.scss
+++ b/client/src/components/Comments/NestedComments/NestedComments.scss
@@ -45,6 +45,7 @@
     }
 
     .nestedcomments-description {
+        word-break: break-all;
         margin: 5px 0 5px;
         font-size: 14px;
     }
