--- a/client/src/pages/EditPost/EditPost.scss
+++ b/client/src/pages/EditPost/EditPost.scss
@@ -25,6 +25,7 @@
         .title {
             margin: 10px 0 10px;
             input {
+                word-break: break-all;
                 display: block;
                 width: 100%;
                 padding: 10px;
@@ -35,6 +36,7 @@
         }
 
         .quill {
+            word-break: break-all;
             width: 100%;
             height: 400px;
         }
