Fix 콘텐츠 컨테이너 경계 초과 현상 수정

--- a/client/src/components/PostCard/PostCard/PostCard.scss
+++ b/client/src/components/PostCard/PostCard/PostCard.scss
@@ -47,6 +47,11 @@
             margin-top: 5px;
 
             .postcard-body-title {
+                display: inline-block;
+                width: 200px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
                 @include aLink;
             }
         }
